# ws

./: .gitignore
wasm-client/: Cargo.toml  LICENSE_MIT
wasm-client/src/: lib.rs
wasm-client/src/models/: course.rs
wasm-client/www/: index.html  index.js  package-lock.json
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs
webapp/static/: register.html  teachers.html
webapp/static/css/: register.css
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
